--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Soros Chok"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Soros Chok"
+description              : "User Experience Portfolio"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,10 +106,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Soros Chok"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "User Experience Portfolio"
+  location         : "Westminster, CA"
   email            :
   links:
     - label: "Email"
@@ -293,3 +293,11 @@ defaults:
       comments: # true
       share: true
       related: true
+
+# _pages
+- scope:
+    path: ""
+    type: posts
+  values:
+    layout: single
+    author_profile: true
